<resources>
    <string name="app_name">Урок 1</string>
    <string name="title_activity_main">MainActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="title_activity_task2">Task2Activity</string>
    <string name="title_activity_task3">Task3Activity</string>
    <string name="main_menu_button_text_1">Задание 1</string>
    <string name="main_menu_button_text_2">Задание 2</string>
    <string name="main_menu_button_text_3">Задание 3</string>
    <string name="task1_swith_text">Жырный шрифт</string>
    <string name="task1_checkBox_text">курсив</string>
    <string name="task1_toggleButton_textOff">Зеленый текст</string>
    <string name="task1_toggleButton_textOn">Крассный текст</string>
    <string name="Text">TextView_text</string>
    <string name="task1_editText_hint">Введите текст</string>
    <string name="task1_button_text">Нажми чтобы применить</string>
    <string name="task2_hint_nik">Ник</string>
    <string name="task2_hint_name">Имя</string>
    <string name="task2_hint_phone">Телефон</string>
    <string name="task2_hint_age">Возраст</string>
    <string name="task2_hint_email">email</string>
    <string name="task2_hint_password">Пароль</string>
    <string name="task2_text">Регистрация ползователя</string>
    <string name="task2_button_text">применить</string>
    <string name="task3_text">Выберите дату</string>
    <string name="task3_button_text">Ok</string>
</resources>