<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="50dp"
    android:paddingStart="20dp"
    android:orientation="vertical"
    tools:context=".Task1Activity"
    tools:ignore="RtlSymmetry">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/task2_text"
            android:textSize="25sp"
            android:textColor="@color/black"
            android:layout_marginBottom="30dp"
            android:layout_marginTop="30dp"/>
        <EditText
            android:id="@+id/nik"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="15"
            android:maxEms="11"
            android:hint="@string/task2_hint_nik"
            android:inputType="text"
            android:autofillHints="15" />
        <EditText
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="15"
            android:maxEms="20"
            android:hint="@string/task2_hint_name"
            android:inputType="textPersonName"
            android:autofillHints="20" />
        <EditText
            android:id="@+id/phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="11"
            android:hint="@string/task2_hint_phone"
            android:inputType="phone"
            android:maxEms="11" />
        <EditText
            android:id="@+id/age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="5"
            android:maxEms="2"
            android:hint="@string/task2_hint_age"
            android:inputType="number"
            android:autofillHints="2" />
        <EditText
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="15"
            android:maxEms="20"
            android:hint="@string/task2_hint_email"
            android:inputType="textEmailAddress"
            android:autofillHints="20" />
        <EditText
            android:id="@+id/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="15"
            android:maxEms="20"
            android:hint="@string/task2_hint_password"
            android:inputType="textPassword"
            android:autofillHints="15" />
        <Button
            android:id="@+id/task2_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/task2_button_text"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"/>
</LinearLayout>