<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="@dimen/box_inset_layout_padding"
    tools:context=".MainActivity">


    <Button
        android:id="@+id/task1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/margin_bottom_button"
        android:text="@string/main_menu_button_text_1" />

    <Button
        android:id="@+id/task2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/margin_bottom_button"
        android:text="@string/main_menu_button_text_2" />

    <Button
        android:id="@+id/task3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/main_menu_button_text_3" />
</LinearLayout>